:wrench: centralizando tratamento de erro